# learn

./: .gitignore
apis/go-grpc/bookstore/: go.mod
apis/go-net/: go.mod  server.go
apis/go-net/basic-rest/: go.mod
apis/go-net/controller/: controller.go
apis/go-net/service/: service.go
apis/go-net/time/: Dockerfile  time.go
apis/microservices/order/: go.mod
challenges/algorithms/: bubbleSort.cpp  leetcode.cpp
challenges/aoc/: 2c.c  template.c  template.cpp  template.py
challenges/aof/2022/: 2.c  2a-2.c  2a.c  2b.c  2c.c
challenges/cardgame/: README.md  pom.xml
challenges/html-downloader/: README.md  pom.xml
challenges/k8s/api/: .project  (+2 more)
challenges/pepetris/: .prettierrc.json  index.html  logic.js
docs/: index.html
docs/assets/: index-BkyQtM80.js  index-By9z9r3Y.js
fe/workers/: index.html  main.js  worker.js
games/arkanoid-sfml/: CMakeLists.txt  README.md
games/arkanoid-sfml/src/: Game.cpp  Game.h  Hud.cpp  Hud.h  Main.cpp  Player.cpp  Player.h  Textbox.cpp  Window.cpp  World.cpp  World.h
games/snake-sfml/: CMakeLists.txt  README.md
games/snake-sfml/src/: Game.cpp  Game.h  Hud.cpp  Hud.h  Main.cpp  Sanke.cpp  Snake.cpp  Snake.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h  World.cpp  World.h
ml/: main.py
ml/housing/: Housing.ipynb
ml/tensorflow/: intro.py
networking/c-server/: a.out  adapters.c  ip  ipaddr.c
networking/go/: go.mod  server.go
networking/time/: client.c  time.c
nlp/: Text.java  text.py
web-be/xslt/: cat.xsl  cdcatalog.xml  hello.html  hello.xml  hello.xsl
web-fe/workers/: index.html  main.js  worker.js
(+989 files in other folders)
